# SilverWolf-3D-Driver

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
Honkai Star Rail - Silver Wolf Skeleton Binding/: Star_Rail_-_Silver_Wolf.usdz
Honkai Star Rail - Silver Wolf Skeleton Binding/star_rail_-_silver_wolf/: license.txt
SilverWolf/: scene.gltf
SilverWolf/weapon/: weapon.gltf
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
